# CI_Learning

./: .gitignore  CMakeLists.txt  README.md  test
.cache/clangd/index/: main.cpp.9B271D23074C6721.idx  math.cpp.B3DC0E1A839F2900.idx  math.h.5CE4AFA9F201F8E7.idx  test.cpp.8B437408CEB8AC53.idx
.github/workflows/: ci.yml
include/: math.h
src/: main.cpp  math.cpp
tests/: test.cpp
